@@ -208,6 +208,7 @@ changes to languages because of Bugzilla reports.
 * ApiBase::getValidNamespaces() (deprecated in 1.17)
 * ApiMain::setCachePrivate() (deprecated in 1.17)
 * ApiMain::setVaryCookie (deprecated in 1.17)
+* Article::forUpdate() (deprecated in 1.18)
 * CategoryViewer::addSubcategory() (deprecated in 1.17)
 * EditPage::spamPage() (deprecated since 1.17)
 * Exif::getFormattedData() (deprecated in 1.18)
